// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe eJUlos"
    >
      <input
        class="peer hidden"
        type="checkbox"
      />
      <div
        class="sc-jSUZER jbZjW"
      />
      <div
        class="sc-gKPRtg hlWRQJ"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render 1`] = `
<div>
  <label
    class="sc-hLBbgP dBDxxq"
  >
    <div
      class="sc-eDvSVe eGDUlj"
    >
      <input
        class="peer hidden"
        type="checkbox"
      />
      <div
        class="sc-jSUZER jWOcza"
      />
      <div
        class="sc-gKPRtg lbFYFG"
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-hLBbgP bwQUxR"
    disabled=""
  >
    <div
      class="sc-eDvSVe eGDUlj"
    >
      <input
        class="peer hidden"
        disabled=""
        type="checkbox"
      />
      <div
        class="sc-jSUZER cYLjeu"
        disabled=""
      />
      <div
        class="sc-gKPRtg dzxhHl"
        disabled=""
      >
        <svg
          aria-hidden="true"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.5 12.75l6 6 9-13.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
